# LLM-Pretraining

./: .gitignore  README.md  main.py  pyproject.toml  setup.sh  train_config.yaml
.github/workflows/: python-app.yml
src/: ci_config.yaml  dataset.py  pretrain_config.yaml  train.py  train_config.yaml  transformer.py  upload.py
src/configs/: ablation_config.yaml
src/data_module/: dataset.py
src/hf_automodel/: configuration_lightningtransformer.py  lightningtransformer.py  lightningtransformer_symlink.py  modeling_lightningtransformer.py
src/hf_forcausallm/: configuration_lightningtransformer.py  lightningtransformer_symlink.py  modeling_lightningtransformer.py
src/hf_wrapper/: lightningtransformer.py  modeling_lightningtransformer.py
src/nets/: attention_block.py  attention_head.py  rope.py  swiglu.py  swiglu_mlp.py  transformer.py
src/utils/: lr_scheduler.py
