[project]
name = "llm-updated"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.4.2",
    "datasets>=5.0.0",
    "huggingface-hub>=1.19.0",
    "lightning>=2.6.5",
    "pytest>=9.1.1",
    "ruff>=0.15.19",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "wandb>=0.27.2",
]
